Version 2.9.0, July 2, 2019

Renamed the Signedness Checker's @Constant annotation to @SignednessGlb.

Improved the diagnostic text for uninitialized static fields.  The new
error key is initialization.static.fields.uninitialized.

Annotated the first argument of Opt.get and Opt.orElseThrow as @NonNull.

---------------------------------------------------------------------------

Version 2.8.2, June 3, 2019

The Signature Checker supports a new type, @FqBinaryName.

Added a template for a repository that you can use to write a custom checker.

Linked to the Checker Framework Gradle plugin, which makes it easy to run
a checker on a project that is built using the Gradle build tool.

Implementation detail: deprecated TreeUtils.skipParens in favor of
TreeUtils.withoutParens which has the same specification.

Closed issues:
2291, 2291, 2406, 2406, 2469, 2469, 2477, 2477, 2479, 2479, 2480, 2480, 2494,
2494, 2499, 2499.

---------------------------------------------------------------------------

Version 2.8.1, May 1, 2019

Moved text about the Purity Checker into its own chapter in the manual.

Closed issues:
660, 2030, 2223, 2240, 2244, 2375, 2407, 2410, 2415, 2420, 2421, 2446, 2447,
2460, 2462.

---------------------------------------------------------------------------

Version 2.8.0, April 3, 2019

Support `androidx.annotation.RecentlyNonNull` and `RecentlyNullable` (as of
2.6.0, but not previously documented).

The following qualifiers are now repeatable:  `@DefaultQualifier`
`@EnsuresQualifierIf` `@EnsuresQualifier` `@RequiresQualifier`.  Therefore,
users generally do not need to write the following wrapper annotations:
`@DefaultQualifiers` `@EnsuresQualifiersIf` `@EnsuresQualifiers`
`@RequiresQualifiers`.

New command-line option `-ArequirePrefixInWarningSuppressions` makes
`@SuppressWarnings` recognize warning keys of the form
"checkername:key.about.problem" but ignore warning keys of the form
"key.about.problem" without the checker name as a prefix.
