@@ -58,15 +58,20 @@ These are the qualifiers in the signedness type system:
     set, then the bits should be interpreted as a negative value.
     This is the default annotation.
 
+\item[\refqualclass{checker/signedness/qual}{SignedPositive}]
+    indicates that a value is known at compile time to be in the positive
+    signed range, so it has the same interpretation as signed or unsigned
+    and may be used with either interpretation.  Programmers should usually
+    write \refqualclass{checker/signedness/qual}{Signed} or
+    \refqualclass{checker/signedness/qual}{Unsigned} instead.
+
 \item[\refqualclass{checker/signedness/qual}{SignednessGlb}]
-    indicates that a value may be
-    interpreted as unsigned or signed.
-    This primarily applies to values that are known at compile
-    time to be in the positive signed range.
-    It is also used for manifest literals, to prevent the programmer from
-    having to annotate them all explicitly.
-    This annotation is used internally, and should not
-    be written by the programmer.
+    indicates that a value may be interpreted as unsigned or signed.  It
+    covers the same cases as
+    \refqualclass{checker/signedness/qual}{SignedPositive}, plus manifest literals, to
+    prevent the programmer from having to annotate them all explicitly.
+    This annotation should almost never be written by the
+    programmer.
 
  \item[\refqualclass{checker/signedness/qual}{PolySigned}]
    indicates qualifier polymorphism.
